logging and policies fixes
